--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,9 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-header {
-  background: #f9d623;
+  /* background: #2c9ecb; */
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(7,59,154,0.788953081232493) 0%, rgba(3,155,218,1) 100%, rgba(7,20,171,1) 100%);
   height: 800px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -111,7 +113,7 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 #fh5co-header .intro {
-  margin-top: 18em;
+  margin-top: 10em;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .intro {
@@ -769,4 +771,110 @@ h1, h2, h3, h4, h5, h6, figure {
   opacity: 0;
 }
 
+.custom-icon{
+  display: flex;
+  width: 50%;
+  height:50%;
+}
+
+.header-text :hover{
+  transform: scale(1.2);
+  color: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+}
+
+.header-text{
+  
+  transition: transform .3s;
+}
+
+.video-player {
+  max-width: 750px;
+  position: relative;
+  overflow: hidden;
+}
+
+.video {
+  width: 100%;
+}
+
+.player-controls {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transform: translateY(100%) translateY(-5px);
+  transition: 0.3s;
+  flex-wrap: wrap;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.video-player:hover .player-controls {
+  transform: translateY(0);
+}
+
+.play-button {
+  width: 10%;
+  border: none;
+  background: black;
+  color: white;
+  padding: 10px;
+}
+
+.play-button:focus {
+  outline: none;
+}
+
+.time {
+  font-size: 1em;
+  color: white;
+  width: 15%;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  background: transparent;
+  margin: 0;
+  width: 75%;
+  padding: 0 10px;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: black;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 10px;
+  width: 10px;
+  background: orangered;
+  cursor: pointer;
+}
+
+.video-progress {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 5px;
+  transition: 0.3s;
+  background: rgba(0, 0, 0, 0.6);
+  cursor: pointer;
+}
+
+.video-progress-filled {
+  width: 0;
+  background: orangered;
+}
+
+.video-player:hover .video-progress {
+  height: 20px;
+}
 /*# sourceMappingURL=style.css.map */
