--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 * ======================================================= */
 html, body {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -64,7 +65,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-logo {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: #fff;
   margin-bottom: 10px;
   line-height: 1.5;
@@ -79,10 +80,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-header {
-  /* background: #2c9ecb; */
-  /* background: rgb(2,0,36); */
-  opacity: 0.5;
-  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(7,59,154,0.788953081232493) 0%, rgba(3,155,218,1) 0%, rgba(201,205,255,1) 100%); */
+  /* background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(235,221,157,1) 0%, rgba(255,253,235,0.25253851540616246) 0%); */
   height: 800px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -156,6 +155,12 @@ h1, h2, h3, h4, h5, h6, figure {
   color: rgba(255, 255, 255, 0.95);
   border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 }
+
+/* #fh5co-header .intro a :hover {
+  color: rgba(255, 255, 255, 0.95);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+} */
+
 #fh5co-header .intro a:hover {
   color: white;
   text-decoration: none;
@@ -425,11 +430,13 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-feature .fh5co-copy > .fh5co-copy-inner h2:before {
   position: absolute;
   bottom: 0;
-  width: 30px;
+  width: 555px;
   height: 2px;
   background: #52d3aa;
+  transition: transform .3s;
   content: "";
 }
+
 @media screen and (max-width: 992px) {
   .fh5co-feature .fh5co-copy > .fh5co-copy-inner h2:before {
     left: 50%;
@@ -491,7 +498,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #666666;
 }
 #footer a {
-  color: #f9d623;
+  /* color: #f9d623; */
 }
 #footer .fh5co-social {
   margin: 0;
@@ -508,7 +515,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #footer .fh5co-social li a {
   padding: 20px;
-  color: #f9d623;
+  /* /color: #f9d623; */
 }
 #footer .fh5co-social li a i {
   font-size: 30px;
@@ -901,9 +908,32 @@ input[type="range"]::-webkit-slider-thumb {
   transition: transform .3s;
 }
 .image-hover :hover{
-  transform: scale(1.2);
+  transform: scale(1.1);
   cursor: pointer;
   z-index: 100;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 100;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #52d3aa;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+.text-outline{
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
 /*# sourceMappingURL=style.css.map */
