--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background-repeat: no-repeat;
   background-position: top center;
   position: relative;
-  margin-bottom: 6em;
+  /* margin-bottom: 6em; */
 }
 @media screen and (max-width: 480px) {
   #fh5co-header {
