--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header {
   /* background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(235,221,157,1) 0%, rgba(255,253,235,0.25253851540616246) 0%); */
-  height: 800px;
+  height: 500px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 #fh5co-header .intro {
-  margin-top: 5em;
+  margin-top: 10em;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .intro {
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .fh5co-intro-img {
   position: relative;
-  bottom: -4em;
+  bottom: -9em;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .fh5co-intro-img {
@@ -225,7 +225,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .fh5co-intro-img .img-2 {
   position: absolute;
-  top: 5em;
+  top: 10em;
   right: -3em;
 }
 @media screen and (max-width: 992px) {
@@ -781,8 +781,8 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .custom-icon{
   display: flex;
-  width: 35%;
-  height:35%;
+  width: 50%;
+  height:50%;
 }
 
 .header-text :hover{
@@ -935,5 +935,129 @@ input[type="range"]::-webkit-slider-thumb {
 
 .text-outline{
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+nav{
+  background: #ffffff;
+  height: 80px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+label.logo{
+  color: black;
+  font-size: 35px;
+  line-height: 80px;
+  font-weight: bold;
+}
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a{
+  color: black;
+  font-size: 17px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 /*# sourceMappingURL=style.css.map */
