--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ html, body {
   scroll-behavior: smooth;
 }
 
+*{
+  font-family: "Dancing Script", Times, serif;
+}
+
 body {
   font-family: "Varela Round", Arial, sans-serif;
   font-weight: 400;
@@ -82,7 +86,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header {
   /* background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(235,221,157,1) 0%, rgba(255,253,235,0.25253851540616246) 0%); */
-  height: 500px;
+  height: 600px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -203,7 +207,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .fh5co-intro-img {
   position: relative;
-  bottom: -9em;
+  bottom: -12em;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .fh5co-intro-img {
@@ -768,7 +772,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .custom-font {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Dancing Script", Times, serif;
 }
 
 .row-pb-md {
@@ -957,7 +961,7 @@ nav ul{
 nav ul li{
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
+  margin: 0 15px;
 }
 nav ul li a{
   color: black;
@@ -968,7 +972,7 @@ nav ul li a{
 
 * {box-sizing:border-box}
 
-/* Slideshow container */
+/* Slideshow container  */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
@@ -1008,7 +1012,7 @@ nav ul li a{
 }
 
 /* Caption text */
-.text {
+/* .text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -1016,7 +1020,7 @@ nav ul li a{
   bottom: 8px;
   width: 100%;
   text-align: center;
-}
+} */
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -1040,7 +1044,7 @@ nav ul li a{
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  /* background-color: #717171; */
 }
 
 /* Fading animation */
@@ -1060,4 +1064,7 @@ nav ul li a{
   from {opacity: .4}
   to {opacity: 1}
 }
-/*# sourceMappingURL=style.css.map */
+
+/*# sourceMappingURL=style.css.map
+
+
