--- a/css/style.css
+++ b/css/style.css
@@ -1050,8 +1050,8 @@ nav ul li a{
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  /* background-color: #717171; */
+.active-dot, .dot:hover {
+  background-color: #717171;
 }
 
 /* Fading animation */
