--- a/css/style.css
+++ b/css/style.css
@@ -916,10 +916,10 @@ input[type="range"]::-webkit-slider-thumb {
   box-shadow: 0 3px 10px rgb(0 0 0 / 3);
 }
 .image-hover{
-  transition: transform .3s;
+  transition: transform .3s !important;
 }
 .image-hover :hover{
-  transform: scale(1.1);
+  transform: scale(1.1) !important;
   cursor: pointer;
   z-index: 100;
 }
